[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-cli"
version = "1.0.3"
description = "A smart switchboard for Local (Ollama) vs Cloud (Gemini) AI coding"
dependencies = [
    "rich",
    "aider-chat"
]
requires-python = ">=3.10"

[project.scripts]
coderguy = "bridge:main"